syntax = "proto3";
option go_package = ".;gRPC";

// 不知道怎么把这些东西搞成字典，就都先用结构体了。你要是能弄成字典你就弄成字典，反正是这些字段。
message MsgReq {
  uint32 UserID = 1;
  string UserKey = 2;
  string Mobile = 3;
  string Text = 4;
  int32 Tpl_ID = 5;
  map<string, string> Tpl_PlaceHolder = 6;
}

message MsgReply {
  uint32 ID = 1;
  double Fee = 2;
}
