syntax = "proto3";
option go_package = ".;gRPC";

import public "user.proto";
import public "signature.proto";
import public "template.proto";
import public "message.proto";

service SMS {
  rpc Ping(PingReq) returns (PingReply) {}

  // rpc SetBalance(UsrReq)returns (UsrReply) {}
  // rpc GetBalance(UsrReq)returns (UsrReply) {}
  // rpc Charge(UsrReq)returns (UsrReply) {}
  // rpc Expense(UsrReq)returns (UsrReply) {}
  rpc UserBalance(UsrReq) returns (UsrReply) {}

  rpc GetSign(SignReq) returns (SignReply) {}

  rpc GetTpl(TplReq) returns (TplReply) {}
  rpc RegisteTpl(TplReq) returns (TplReply) {}
  rpc UpdateTpl(TplReq) returns (TplReply) {}

  rpc SendMsgByTemplate(MsgReq) returns (MsgReply) {}
  rpc SendMsgByText(MsgReq) returns (MsgReply) {}
}

message PingReq {}

message PingReply { string message = 1; }
